// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExistingEvent renders with props and context 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className={undefined}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        data-icon="times"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          version="1.1"
          viewBox="0 0 15 15"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <title>
            Rectangle
          </title>
          <desc>
            Created with Sketch.
          </desc>
          <g
            fill="none"
            fillRule="evenodd"
            id="Symbols"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#FA7E23"
              fillRule="nonzero"
              id="1:1-Private-Meeting-small"
              transform="translate(-23.000000, -64.000000)"
            >
              <rect
                fill="#f40"
                height="15"
                id="Rectangle"
                rx="4"
                width="15"
                x="23"
                y="64"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        className={undefined}
      >
        <h2
          className={undefined}
        >
          some title
        </h2>
        <p
          className={undefined}
        >
          Thursday, 4 April - 6:15-NaN:NaN
        </p>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          aria-hidden="true"
          data-icon="users"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className={undefined}
      >
        <ul
          className={undefined}
        >
          <li>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <object
                  data={undefined}
                  type="image/png"
                >
                  <img
                    alt="Invitee avatar"
                    src="https://s3-eu-west-1.amazonaws.com/assets.cilabs.com/images/person.svg"
                    style={
                      Object {
                        "borderColor": "transparent",
                      }
                    }
                  />
                </object>
                <svg
                  viewBox="0 0 10 9"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <defs>
                    <clipPath
                      id="vrmva"
                    >
                      <path
                        d="M4.125 5.725L2.9 4.5l-.408.408 1.633 1.634 3.5-3.5-.408-.409z"
                      />
                    </clipPath>
                  </defs>
                  <g>
                    <g>
                      <g>
                        <path
                          d="M5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9z"
                          fill="#f8992c"
                        />
                      </g>
                      <g>
                        <g />
                        <g
                          clipPath="url(#vrmva)"
                        >
                          <g>
                            <path
                              d="M1.5 1h7v7h-7z"
                              fill="#fff"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </div>
              <div
                className={undefined}
              >
                <p
                  className={undefined}
                >
                  Tomasz undefined
                </p>
                <p
                  className={undefined}
                >
                  Organizer
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          aria-hidden="true"
          data-icon="align-left"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 344h262.34A12.82 12.82 0 0 0 288 331.17v-22.34A12.82 12.82 0 0 0 275.17 296H12.83A12.82 12.82 0 0 0 0 308.83v22.34A12.82 12.82 0 0 0 12.83 344zm0-256h262.34A12.82 12.82 0 0 0 288 75.17V52.83A12.82 12.82 0 0 0 275.17 40H12.83A12.82 12.82 0 0 0 0 52.83v22.34A12.82 12.82 0 0 0 12.83 88zM432 168H16a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16zm0 256H16a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className={undefined}
      >
        catching up
      </div>
    </div>
  </div>
  <div
    className={undefined}
  >
    <div>
      Going?
    </div>
    <div>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        No
      </button>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        Maybe
      </button>
    </div>
  </div>
</div>
`;

exports[`ExistingEvent renders with props, and no context 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className={undefined}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        data-icon="times"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          version="1.1"
          viewBox="0 0 15 15"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <title>
            Rectangle
          </title>
          <desc>
            Created with Sketch.
          </desc>
          <g
            fill="none"
            fillRule="evenodd"
            id="Symbols"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#FA7E23"
              fillRule="nonzero"
              id="1:1-Private-Meeting-small"
              transform="translate(-23.000000, -64.000000)"
            >
              <rect
                fill="#f40"
                height="15"
                id="Rectangle"
                rx="4"
                width="15"
                x="23"
                y="64"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        className={undefined}
      >
        <h2
          className={undefined}
        >
          some title
        </h2>
        <p
          className={undefined}
        />
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          aria-hidden="true"
          data-icon="users"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className={undefined}
      >
        Loading...
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          aria-hidden="true"
          data-icon="align-left"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 344h262.34A12.82 12.82 0 0 0 288 331.17v-22.34A12.82 12.82 0 0 0 275.17 296H12.83A12.82 12.82 0 0 0 0 308.83v22.34A12.82 12.82 0 0 0 12.83 344zm0-256h262.34A12.82 12.82 0 0 0 288 75.17V52.83A12.82 12.82 0 0 0 275.17 40H12.83A12.82 12.82 0 0 0 0 52.83v22.34A12.82 12.82 0 0 0 12.83 88zM432 168H16a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16zm0 256H16a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className={undefined}
      >
        catching up
      </div>
    </div>
  </div>
  <div
    className={undefined}
  >
    <div>
      Going?
    </div>
    <div>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        No
      </button>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        Maybe
      </button>
    </div>
  </div>
</div>
`;

exports[`ExistingEvent renders without props or context 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <button
      className={undefined}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        data-icon="times"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          version="1.1"
          viewBox="0 0 15 15"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <title>
            Rectangle
          </title>
          <desc>
            Created with Sketch.
          </desc>
          <g
            fill="none"
            fillRule="evenodd"
            id="Symbols"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="#FA7E23"
              fillRule="nonzero"
              id="1:1-Private-Meeting-small"
              transform="translate(-23.000000, -64.000000)"
            >
              <rect
                fill="#f40"
                height="15"
                id="Rectangle"
                rx="4"
                width="15"
                x="23"
                y="64"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        className={undefined}
      >
        <h2
          className={undefined}
        />
        <p
          className={undefined}
        />
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <svg
          aria-hidden="true"
          data-icon="users"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className={undefined}
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    className={undefined}
  >
    <div>
      Going?
    </div>
    <div>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        No
      </button>
      <button
        className="undefined undefined "
        onClick={[Function]}
      >
        Maybe
      </button>
    </div>
  </div>
</div>
`;
